2003-11-08  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* win/tclWinSend.c: Fixed an error returning the registered name.

2003-11-08  Vince Darley <vincentdarley@users.sourceforge.net>

	* tests/textDisp.test:
	* tests/text.test:
	* generic/tkText.h:
	* generic/tkTextIndex.c: 
	* generic/tkTextBTree.c:
	* generic/tkTextDisp.c: fix to another version of [Bug 833627]
	(crash in tkchat), adding more tests.  I believe the handling of
	nested elide tags of all types is now correct!
	
2003-11-07  Vince Darley <vincentdarley@users.sourceforge.net>

	* tests/textDisp.test:
	* generic/tkTextDisp.c: fix to another version of [Bug 833627]
	(crash in tkchat), adding two new tests. 
	
	* generic/tkText.c
	* generic/tkTextIndex.c
	* generic/tkTextDisp.c
	* generic/tkTextWind.c
	* generic/tkTextImage.c
	* generic/tkTextTag.c
	* generic/tkTextMark.c
	* generic/tkTextBTree.c
	* generic/tkText.h         
	* doc/text.n
	* tests/text.test
	* tests/textWind.test: better handling of 'elide' tags, especially
	during line layout, counting and forward/backward index movement.
	Added new tests to ensure correct behaviour with multiple tags of
	multiple priorities.

2003-11-05  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	* library/demos/nl.msg: Dutch messages from Arjen Markus [Patch 836368]
	* library/demos/widget: Added mechanism to support some l10n of
	the actual hotkeys used.

2003-11-04  Vince Darley <vincentdarley@users.sourceforge.net>

	* tests/textDisp.test:
	* tests/textWind.test: fix to rest of test suite problems
	reported in [Bug 833761].  This also has the nice effect 
	that many more tests are now run on Windows.
	
2003-11-04  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	* library/demos/widget (showCode,printCode): Added code to print
	the source code on Unix and Win, courtesy of Arjen Markus and the
	Wiki.  [Patch 835644]

2003-11-03  Vince Darley <vincentdarley@users.sourceforge.net>

	* generic/tkTextDisp.c