@@ -1,3 +1,8 @@
+2003-11-10  Vince Darley <vincentdarley@users.sourceforge.net>
+
+	* generic/tkTextDisp.c: correct yview handling of text widgets 
+	containing no vertical pixels at all.
+	
 2003-11-08  Pat Thoyts  <patthoyts@users.sourceforge.net>
 
 	* win/tclWinSend.c: Fixed an error returning the registered name.
